# mintia

./: .travis.yml  Pipfile  README.md  command_interface.py  setup.cfg  setup.py  tox.ini
docs/: conf.py
markdown_creator/: __init__.py  image2markdown.py
mintia/: __init__.py  image2markdown.py
test_markdown/: image.md
tests/: context.py  test_image2markdown.py
