# metadataセクションではパッケージのメタデータを定義する
# これらの値はpypiで公開した際に表示される。
# なおversion等、一部のキーはディレクティブの指定により外部ファイルから値を取得することができる
# https://setuptools.readthedocs.io/en/latest/setuptools.html#metadata
[metadata]
name = mintia
version = 0.2.0
license = LICENSE
description = Aggregate separate image files into one markdown
long_description = file: index.rst
author = Takuya Iwasa


# optionsセクションではパッケージの依存関係やpip installした時の動作を定義する
# 値が複数ある場合、インデントすることで1行に1つの値を書くことができる。
# https://setuptools.readthedocs.io/en/latest/setuptools.html#options
[options]
packages=find:

# optionの内、値のTypeがsectionのものは別セクションで記述する。
# [options.extras_require]
# develop =

# [options.entry_points]
# console_scripts =

# gui_scripts =
